refactor: change extinguish for resolved
